--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ div h1 span {
   position: absolute;
   width: 100%;
   background-color: #00000081;
-  background-image: url(/image/img2.jfif);
+  background-image: url(/image/img2.jpg);
   height: 578px;
   z-index: -999;
 }
